--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
 
       </a>
       <div *dropdownMenu class="dropdown-menu">
-        <a class="dropdown-item">Edit profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
         <div class="dropwdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Log out</a>
       </div>
