--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -4,10 +4,13 @@
             <h1>Your profile</h1>
         </div>
         <div class="col-8">
-            <div class="alert alert-info">
-                <p><strong>Information: </strong>
+            @if(editForm.dirty){
+              <div class="alert alert-info pb-0">
+                 <p><strong>Information: </strong>
                     You have made changes, any unsaved changes will be lost</p>
-            </div>
+              </div>
+            }
+            
         </div>
         <div class="col-4">
             <div class="card">
@@ -36,7 +39,12 @@
                     </div>                    
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success col-12">Save changes</button>
+                    <button 
+                        [disabled]="!editForm.dirty"
+                        form="editForm" type="submit" 
+                        class="btn btn-success col-12">
+                        Save changes
+                    </button>
                 </div>
             </div>
         </div>
@@ -44,7 +52,7 @@
         <div class="col-8">
             <tabset class="member-tabset">
                 <tab heading="About {{member.knownAs}}">
-                    <form>
+                    <form id="editForm" #editForm="ngForm" (ngSubmit)="updateMember()">
                         <h4 class="mt-2">Description</h4>
                         <textarea 
                             class="form-control" 
